# SubSolver

./: .gitignore  Cargo.toml  README.md  s.py
.github/workflows/: check.yml  release.yml
benches/: benchmark.rs
src/: cache.rs  cli.rs  input.rs  lib.rs  loading.rs  main.rs  solve.rs
wordlist/: english.txt
