[package]
name = "sub-solver"
version = "0.1.0"
edition = "2021"
authors = ["Jorian Woltjer (J0R1AN)"]
license = "MIT OR Apache-2.0"
description = "Solve Substitution Ciphers using a wordlist"
readme = "README.md"
homepage = "https://github.com/JorianWoltjer/SubSolver"
repository = "https://github.com/JorianWoltjer/SubSolver"
keywords = ["cli", "cryptography", "cipher", "solver", "substitution", "wordlist"]
categories = ["command-line-utilities"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
unidecode = "0.3.0"
