[package]
name = "sub-solver"
version = "0.1.2"
edition = "2021"
authors = ["Jorian Woltjer (J0R1AN)"]
license = "MIT OR Apache-2.0"
description = "Solve Substitution Ciphers using a wordlist"
readme = "README.md"
homepage = "https://github.com/JorianWoltjer/SubSolver"
repository = "https://github.com/JorianWoltjer/SubSolver"
keywords = ["cli", "crypto", "security", "solver", "wordlist"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.21.7"
bincode = "1.3.3"
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
unidecode = "0.3.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
